# Ai-factory

./: .gitignore  Dockerfile  README.md  pyproject.toml  runtime_invariants.md
agent_devos/: __init__.py  agent_loader.py  artifact_registry.py  context_assembler.py  dag_builder.py  execution_snapshot.py  global_policy.py  human_gate.py  orchestrator.py  priority.py  recovery_engine.py  scheduler.py  tool_registry.py
agents/: analyst.md  architect.md  backend.md  frontend.md  knowledge.md  orchestrator.md  recorder.md  tester.md  verifier.md
ai_runtime/: __init__.py  agent_adapter.py  capability_analyzer.py  component_registry.py  context.py  convergence.py  event.py  executor.py  fix_loop.py  fsm.py  graph.py  patch_engine.py  policy.py  runtime.py  scheduler.py  scope.py  snapshot.py  store.py  task.py
deploy/: docker-compose.yml
profiles/linear-enterprise/: component-rules.md  design-system.md  globals.css  page-patterns.md  profile.json  tailwind-preset.ts
server/: __init__.py  api.py  main.py  ws.py
tests/: __init__.py  test_agent_adapter.py  test_agent_loader.py  test_artifact_registry.py  test_context.py  test_context_assembler.py  test_convergence.py  test_dag_builder.py  test_event.py  test_execution_snapshot.py  test_executor.py  test_fix_loop.py  test_fsm.py  test_global_policy.py  test_graph.py  test_integration.py  test_orchestrator.py  test_patch_engine.py  test_priority.py  test_runtime.py  test_scheduler.py  test_scope.py  test_snapshot.py  test_store.py  test_task.py  test_tool_registry.py
web/: index.html
(+19 files in other folders)
